--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
     },
     "target": "es6",
     "module": "commonjs",
-    "outDir": "./dist",
+    "outDir": "./bin",
     "baseUrl": "./",
     "strict": true,
     "moduleResolution": "node",
